cmake_minimum_required(VERSION 3.25)
project(Y29140 C)

set(CMAKE_C_STANDARD 99)
set(PROJECT_DIR ${PROJECT_SOURCE_DIR})
set(PROJECT_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_DIR}/bin)

file(GLOB_RECURSE SRC_FILE ${PROJECT_SOURCE_DIR}/*.c)

add_executable(Y29140 ${SRC_FILE})
